--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,16 @@
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
+	min-height: 100vh;
 	overflow: hidden;
 }
 
 .container {
-	max-width: 900px;
+	max-width: 1050px;
+	padding: 0 15px;
 	margin: 0 auto;
+}
+
+.main {
+	flex: 1 0 100%;
 }
