--- a/src/components/TypingTest/TypingTest.module.css
+++ b/src/components/TypingTest/TypingTest.module.css
@@ -9,13 +9,27 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	gap: 20px;
+	gap: 13px;
 	overflow: hidden;
 	margin-bottom: 5rem;
+	letter-spacing: 0.02rem;
 }
 
 .test__hotkey {
 	text-align: center;
 	font-size: 14px;
 	color: rgba(255, 255, 255, 0.5);
+}
+
+.test__hotkey>p {
+	opacity: 1;
+	transition: opacity .2s ease-in-out;
+}
+
+.test__hotkey>p.active {
+	opacity: 0;
+}
+
+.key {
+	color: #E2B714;
 }
