--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -16,21 +16,24 @@
 .body {
 	display: flex;
 	justify-content: space-between;
-	width: 400px;
+	width: 500px;
 	padding: 0 20px;
 	margin: 0 auto;
 	border-radius: 8px;
 	background-color:#2C2E31;
 }
 
-.category {
+.sounds {
 	position: relative;
 	display: flex;
 	align-items: center;
-	gap: 20px;
+	gap: 5px;
+	font-weight: 600;
+	letter-spacing: 0;
+	font-size: 11px;
 }
 
-.category::after {
+.sounds:after {
 	content: '';
 	position: absolute;
 	right: -20px;
@@ -38,6 +41,13 @@
 	border-radius: 5px;
 	height: 80%;
 	background: #323437;
+}
+
+.category {
+	position: relative;
+	display: flex;
+	align-items: center;
+	gap: 20px;
 }
 
 .options {
