--- a/src/components/Toolbar/Toolbar.module.css
+++ b/src/components/Toolbar/Toolbar.module.css
@@ -2,10 +2,10 @@
 	position: absolute;
 	top: 20px;
 	left: 0;
-	right: 0; 
+	right: 0;
 	color: #646669;
 	opacity: 1;
-	transition: opacity .2s ease-in-out, top .3s ease-in-out;
+	transition: opacity 0.2s ease-in-out, top 0.3s ease-in-out;
 }
 
 .toolbar.hidden {
@@ -17,16 +17,20 @@
 	display: flex;
 	justify-content: space-between;
 	width: 500px;
+	height: 47px;
 	padding: 0 20px;
 	margin: 0 auto;
 	border-radius: 8px;
-	background-color:#2C2E31;
+	background-color: #2c2e31;
+	transition: width 0.1s ease-in, height 0.1s ease-in;
 }
 
 .sounds {
 	position: relative;
 	display: flex;
 	align-items: center;
+	flex-direction: column-reverse;
+	justify-content: center;
 	gap: 5px;
 	font-weight: 600;
 	letter-spacing: 0;
@@ -41,6 +45,56 @@
 	border-radius: 5px;
 	height: 80%;
 	background: #323437;
+}
+
+.sliderWrapper {
+	display: flex;
+	flex-direction: column-reverse;
+	align-items: center;
+}
+
+.sliderWrapper>label {
+	color: #bdbcb3; 
+}
+
+.slider {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 6rem;
+	cursor: pointer;
+	outline: none;
+	background: transparent;
+	overflow: hidden;
+	border-radius: 15px;
+	margin-top: 5px;
+}
+
+.slider::-webkit-slider-runnable-track {
+	background: #323437;
+	border-radius: 15px;
+}
+
+.slider::-moz-range-track {
+	background: #323437;
+	border-radius: 15px;
+}
+
+.slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	height: 12px;
+	width: 12px;
+	background-color: #ae8b0d;
+	border-radius: 50%;
+	box-shadow: -407px 0 0 400px #e2b714;
+}
+
+.slider::-moz-range-thumb {
+	height: 12px;
+	width: 12px;
+	background-color: #ae8b0d;
+	border-radius: 50%;
+	box-shadow: -407px 0 0 400px #e2b714;
 }
 
 .category {
@@ -70,18 +124,18 @@
 .btn {
 	display: flex;
 	align-items: center;
-	padding: 7px 0;
+	padding: 12px 0;
 	gap: 7px;
 	font-weight: 600;
 	border: none;
 	background: transparent;
 	color: inherit;
 	cursor: pointer;
-	transition: color .1s ease-in-out;
+	transition: color 0.1s ease-in-out;
 }
 
 .btn:hover {
-	color: #BDBCB3;
+	color: #bdbcb3;
 }
 
 .btn:active {
@@ -89,5 +143,5 @@
 }
 
 .btn_active {
-	color: #E2B714;
+	color: #e2b714;
 }
